loopfor.LoopFor.scala.error
Compilation error:
LoopFor:4: error: value to is not a member of Boolean
for(isOverBaggle()<-false to true){
                          ^LoopFor:4: error: not found: value isOverBaggle
for(isOverBaggle()<-false to true){
    ^LoopFor:4: error: not found: value isOverBaggle
for(isOverBaggle()<-false to true){
    ^