loopfor.LoopFor.scala.code

var a:Int=0
var b:Int=0
for(isOverBaggle()<-false to true){
  forward();
  a=a+1
}
pickupBaggle()
for(b<-a to 0){
  backward();
}
dropBaggle()